# lsl-p300-analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  start_analyzer.py  start_speller.py  start_testserver.py
analyzer/: __init__.py  analizer_gui.py  analysis_thread.py  connect.py  custom_filter.py  data.py  filter_test.py  lsl_receiver_thread.py
analyzer/testserver/: __init__.py  bcni_data_server.py  bcnidata.py
analyzer/testserver/BNCI Horizon - Guger 2009/: data_load_test.m
speller/: p300_speller.py
speller/conf_files/: default.cfg  p300.cfg
src/bstadlbauer/p300/analyzer/: __init__.py  analizer_gui.py  analysis_thread.py  connect.py  custom_filter.py  data.py  lsl_receiver_thread.py  main.py
src/bstadlbauer/p300/speller/: p300_speller.py
src/bstadlbauer/p300/speller/conf_files/: default.cfg
src/bstadlbauer/p300/speller/number_images/: Number.xcf
src/bstadlbauer/p300analyzer/: analysis_thread.py  connect.py  data.py  main.py
testserver/: __init__.py  bcni_data_server.py  bcnidata.py  constants.py
testserver/BNCI Horizon - Guger 2009/: data_load_test.m
