[tool.poetry]
name = "bstadlbauer.p300"
version = "0.1.0"
description = "Live visualization of the P300 paradigm"
authors = ["Bernhard Stadlbauer <b.stadlbauer@gmx.net>"]
license = "GNU General Public License v3"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.2"
pylsl = "^1.13.6"
Pillow = "^8.0.1"
matplotlib = "^3.3.2"
scipy = "^1.5.3"
PyQt5 = "^5.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
