[tool.poetry]
name = "bstadlbauer.p300analyzer"
version = "0.1.0"
description = "Live visualization of the P300 paradigm"
authors = ["Bernhard Stadlbauer <b.stadlbauer@gmx.net>"]
license = "GNU General Public License v3"

packages = [
    { include = "bstadlbauer", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.2"
pylsl = "^1.13.6"
Pillow = "^8.0.1"
matplotlib = "^3.3.2"
scipy = "^1.5.3"
PyQt5 = "^5.15.1"
xdg = "^4.0.1"
certifi = "^2020.6.20"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[tool.poetry.scripts]
start-analyzer = 'bstadlbauer.p300analyzer.main:main'

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
